tests/trybuild_fails/pair_not_covariant.stderr
error: lifetime may not live long enough
  --> tests/trybuild_fails/pair_not_covariant.rs:44:22
   |
28 | fn uh_oh<'shorter, 'longer>()
   |          --------  ------- lifetime `'longer` defined here
   |          |
   |          lifetime `'shorter` defined here
...
44 |     let pair_longer: Pair<Foo<'longer>> = Pair::new(Foo(PhantomData));
   |                      ^^^^^^^^^^^^^^^^^^ type annotation requires that `'shorter` must outlive `'longer`
   |
   = help: consider adding the following bound: `'shorter: 'longer`
   = note: requirement occurs because of the type `Pair<Foo<'_>>`, which makes the generic argument `Foo<'_>` invariant
   = note: the struct `Pair<O>` is invariant over the parameter `O`
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance
